cmake_minimum_required(VERSION 3.7)
project(LearningC)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        C_fran_borjan/3_4.c
        C_fran_borjan/3_5.c
        C_fran_borjan/4_1.c
        ovningar/1/hej.c
        ovningar/1/ovning_1_11.c
        ovningar/1/ovning_1_7.c
        ovningar/1/ovning_1_9.c
        ovningar/10/10_1/elib.c
        ovningar/10/10_1/elib.h
        ovningar/10/10_1/main.c
        ovningar/10/10_2/check.c
        ovningar/10/10_2/elib.c
        ovningar/10/10_2/elib.h
        ovningar/10/10_2/main.c
        ovningar/10/10_4/elib.c
        ovningar/10/10_4/elib.h
        ovningar/10/10_4/main.c
        ovningar/10/10_5/elib.c
        ovningar/10/10_5/elib.h
        ovningar/10/10_5/main.c
        ovningar/11/11-3/main.c
        ovningar/11/11-5/main.c
        ovningar/11/11-6/main.c
        ovningar/11/11-7/main.c
        ovningar/11/main.c
        ovningar/2/2_1.c
        ovningar/2/2_10.c
        ovningar/2/2_2.c
        ovningar/2/2_3.c
        ovningar/2/2_4.c
        ovningar/2/2_5.c
        ovningar/2/2_6.c
        ovningar/2/2_7.c
        ovningar/2/2_8.c
        ovningar/2/2_9.c
        ovningar/3/3_1.c
        ovningar/3/3_2.c
        ovningar/3/3_3.c
        ovningar/3/3_4.c
        ovningar/4/4_1.c
        ovningar/4/4_2.c
        ovningar/4/4_3.c
        ovningar/4/4_5.c
        ovningar/4/4_6.c
        ovningar/4/4_7.c
        ovningar/4/4_8.c
        ovningar/6/6_1.c
        ovningar/6/6_2.c
        ovningar/6/6_3.c
        ovningar/6/6_4.c
        ovningar/6/6_5.c
        ovningar/6/6_6.c
        ovningar/6/6_7.c
        ovningar/6/6_8.c
        ovningar/6/6_9.c
        ovningar/7_1/main.c
        ovningar/7_1/nfak.c
        ovningar/7_1/nfak.h
        ovningar/7_2/flib.c
        ovningar/7_2/flib.h
        ovningar/7_2/main.c
        ovningar/7_3/kolapp.c
        ovningar/7_3/kolapp.h
        ovningar/7_3/main.c
        ovningar/8/8_1/main.c
        ovningar/8/8_10/main.c
        ovningar/8/8_2/main.c
        ovningar/8/8_3/main.c
        ovningar/8/8_4/main.c
        ovningar/8/8_5/main.c
        ovningar/8/8_6/main.c
        ovningar/8/8_7/main.c
        ovningar/8/8_8/main.c
        ovningar/8/8_9/main.c
        ovningar/9/9_1/main.c
        ovningar/9/9_10/main.c
        ovningar/9/9_2/main.c
        ovningar/9/9_3/main.c
        ovningar/9/9_4/main.c
        ovningar/9/9_5/main.c
        ovningar/9/9_6/main.c
        ovningar/9/9_7/main.c
        ovningar/9/9_8/main.c
        ovningar/9/9_9/main.c
        ovningar/elib.c
        Programmeringsuppgifter/10/10-1/main.c
        Programmeringsuppgifter/10/10-2/main.c
        Programmeringsuppgifter/10/10-3/main.c
        Programmeringsuppgifter/10/10-4/main.c
        Programmeringsuppgifter/10/10-5/main.c
        Programmeringsuppgifter/10/10-6/main.c
        Programmeringsuppgifter/10/10-7/main.c
        Programmeringsuppgifter/10/10-8/main.c
        Programmeringsuppgifter/11/11-1/main.c
        Programmeringsuppgifter/11/11-2/main.c
        Programmeringsuppgifter/11/11-3/main.c
        Programmeringsuppgifter/11/11-4/main.c
        Programmeringsuppgifter/1_0/1_0.c
        Programmeringsuppgifter/1_0/1_2.c
        Programmeringsuppgifter/2/2_1.c
        Programmeringsuppgifter/2/2_2.c
        Programmeringsuppgifter/2/2_3.c
        Programmeringsuppgifter/2/2_4.c
        Programmeringsuppgifter/2/2_5.c
        Programmeringsuppgifter/3/3_1.c
        Programmeringsuppgifter/3/3_2.c
        Programmeringsuppgifter/3/3_3.c
        Programmeringsuppgifter/3/3_4.c
        Programmeringsuppgifter/4/4_1.c
        Programmeringsuppgifter/4/4_2.c
        Programmeringsuppgifter/4/4_3.c
        "Programmeringsuppgifter/4/4_4 (1).c"
        Programmeringsuppgifter/4/4_4.c
        Programmeringsuppgifter/4/4_5.c
        Programmeringsuppgifter/4/4_6.c
        Programmeringsuppgifter/4/4_7.c
        Programmeringsuppgifter/5/5_2.c
        Programmeringsuppgifter/5/5_3.c
        Programmeringsuppgifter/6/6_1.c
        Programmeringsuppgifter/6/6_10.c
        Programmeringsuppgifter/6/6_11.c
        Programmeringsuppgifter/6/6_2.c
        Programmeringsuppgifter/6/6_3.c
        Programmeringsuppgifter/6/6_4.c
        Programmeringsuppgifter/6/6_5.c
        Programmeringsuppgifter/6/6_6.c
        Programmeringsuppgifter/6/6_7.c
        Programmeringsuppgifter/6/6_8.c
        Programmeringsuppgifter/6/6_9.c
        Programmeringsuppgifter/7/7_1/main.c
        Programmeringsuppgifter/7/7_1/weather_module.c
        Programmeringsuppgifter/7/7_1/weather_module.h
        Programmeringsuppgifter/7/7_2/main.c
        Programmeringsuppgifter/7/7_3/area.c
        Programmeringsuppgifter/7/7_3/area.h
        Programmeringsuppgifter/7/7_3/main.c
        Programmeringsuppgifter/8/8_1/main.c
        "Programmeringsuppgifter/8/8_10 kopia/main.c"
        "Programmeringsuppgifter/8/8_10 kopia/test.c"
        Programmeringsuppgifter/8/8_11/main.c
        Programmeringsuppgifter/8/8_2/main.c
        Programmeringsuppgifter/8/8_3/main.c
        Programmeringsuppgifter/8/8_4/main.c
        Programmeringsuppgifter/8/8_5/main.c
        Programmeringsuppgifter/8/8_6/main.c
        Programmeringsuppgifter/8/8_8/main.c
        Programmeringsuppgifter/8/8_9/main.c
        Programmeringsuppgifter/9/9_1/main.c
        Programmeringsuppgifter/9/9_2/main.c
        Programmeringsuppgifter/9/9_3/main.c
        Programmeringsuppgifter/9/9_4/main.c
        Programmeringsuppgifter/9/9_5/main.c
        Programmeringsuppgifter/9/9_6/main.c
        Programmeringsuppgifter/9/9_7/main.c
        te/lib/elib.c
        te/lib/elib.h
        te/main.c
        elib.c
        elib.h
        testavchar.c)

add_executable(LearningC ${SOURCE_FILES})